# AgdaTutorial

./: About.lagda  Agda.patch  CHANGES  Constants.lagda  Further_Reading.lagda  Index.lagda  Installation.lagda  LICENSE  Makefile  Motivation.lagda  PandocAgda.cabal  README  README.md  Term_Inference.lagda
ActiveHs/Tutorial/: About_a.lagda  Addition_a.lagda  Bool_a.lagda  DataSetsExercises_a.lagda  DataSets_a.lagda  Dec_a.lagda  Elem_a.lagda  EqProof_a.lagda  Equality_a.lagda  Even_a.lagda  Fin_a.lagda  Index_a.lagda  Large_a.lagda  LessThan_a.lagda  List_a.lagda  Logic_a.lagda  Motivation_a.lagda  Nat_a.lagda  Ordering_a.lagda  Parity_a.lagda  Patterns_a.lagda  Polymorphism_a.lagda  Product_a.lagda  Proofs_a.lagda  Recursion_a.lagda  Sigma_a.lagda  Sublist_a.lagda  Technical_Info_a.lagda  Union_a.lagda  Vec_a.lagda  Views_a.lagda
Functions/: Cases.lagda  Dependent.lagda  Equality_Proofs.lagda  Functions_vs_Sets.lagda  Large.lagda  Polymorphic.lagda  Proofs.lagda  Recursive.lagda  Universal_Quantification.lagda
Sets/: Enumerated.lagda  Indexed.lagda  Mutual.lagda  Parameters_vs_Indices.lagda  Parametric.lagda  Propositions.lagda  Recursive.lagda
Syntax/: Infix.lagda
dot/: Binary_tree_shapes.dot
html/: Agda.css
src/: About.lagda  Emacs_Usage.lagda  Further_Reading.lagda  ImportExample.agda  Index.lagda  Term_Inference.lagda
src/Application/: Algebra.lagda
src/Functions/: Cases.lagda  Equality_Proofs.lagda  Polymorphic.lagda  Recursive.lagda
src/Modules/: Advanced.lagda  Basic.lagda  ImportExample.agda  Imports.lagda  Parameterised.lagda  Records.lagda  Standard_Libraries.lagda
src/Sets/: Enumerated.lagda  Mutual.lagda  Records.lagda  Recursive.lagda  With_Functions.lagda
src/Syntax/: Infix.lagda
src/full/Agda/: PandocMain.hs
src/full/Agda/Interaction/: PandocConvertOptions.hs  PandocOptions.hs
src/full/Agda/Interaction/Highlighting/: PandocHTML.hs
src/main/: Main.hs
src/tmp/: Even_a.lagda  Logic_Agda_a.lagda  Ordering_a.lagda  README  Relations_a.lagda  Sigma_a.lagda  Structure_a.lagda  Subsets_a.lagda  SummaryOfSyntax_a.lagda  Views_a.lagda
tmp/: Addition_a.lagda  Logic_Agda_a.lagda  Structure_a.lagda  SummaryOfSyntax_a.lagda  Vec_a.lagda
tutorial/: Makefile
tutorial/src/: About.lagda  Constants.lagda  Emacs_Usage.lagda  Index.lagda  Installation.lagda  Motivation.lagda  Term_Inference.lagda
tutorial/src/About/: AIM_XVI.lagda
tutorial/src/Application/: Algebra.lagda
tutorial/src/Functions/: Cases.lagda  Dependent.lagda  Equality_Proofs.lagda  Functions_vs_Sets.lagda  Large.lagda  Polymorphic.lagda  Universal_Quantification.lagda  Views.lagda
tutorial/src/Functions/Views/: Decidability.lagda
tutorial/src/Modules/: Advanced.lagda  Basic.lagda  Data.lagda  Imports.lagda  Parameterised.lagda  Records.lagda  Standard_Libraries.lagda
tutorial/src/Sets/: Enumerated.lagda  Indexed.lagda  Mutual.lagda  Parameters_vs_Indices.lagda  Parametric.lagda  Propositions.lagda  Records.lagda  Recursive.lagda  Sigma.lagda  With_Functions.lagda
tutorial/src/Syntax/: Decimal_Naturals.lagda  Infix.lagda
tutorial/src/tmp/: Addition_a.lagda  Even_a.lagda  Fin_a.lagda  Parity_a.lagda  README  Subsets_a.lagda
