name:            PandocAgda
version:         2.4.0.0.0
cabal-version:   >= 1.8
build-type:      Simple
license:         BSD3
license-file:    LICENSE
author:          Péter Diviánszky
maintainer:      Péter Diviánszky <divipp@gmail.com>
category:        Dependent types
synopsis:        Pandoc support for literate Agda
description:
  Agda is a dependently typed functional programming language
  and a proof assistant.
  .
  This package contains a modified Agda compiler which
  process comments in literate Agda files with Pandoc.
  Pandoc is a universal document converter.
tested-with:        GHC == 7.6.1
extra-source-files: src/full/Agda/undefined.h
                    README
                    CHANGES
data-dir:           src/data
data-files:         Agda.template
                    Agda.css

source-repository head
  type:     darcs
  location: http://hub.darcs.net/divip/AgdaTutorial

library
  hs-source-dirs:   src/full

  if os(windows)
    build-depends:  Win32 == 2.2.*

  build-depends:    Agda == 2.4.0,
                    base >= 4.2,
                    -- mtl-2.1 contains a severe bug
                    mtl >= 2.0 && < 2.1 || >= 2.1.1,
                    QuickCheck >= 2.3,
                    containers >= 0.1,
                    filepath >= 1.1,
                    xhtml >= 3000.2,
                    pandoc >= 1.10,
                    pandoc-types >= 1.10,
                    text >= 0.11

  if impl(ghc < 7.6)
    build-depends:  old-time >= 1.0 && < 1.2,
                    directory >= 1.0 && < 1.2
  else
      build-depends:  time >= 1.4,
                      directory >= 1.2

  extensions:       CPP
  exposed-modules:  Agda.PandocMain
                    Agda.Interaction.Highlighting.PandocHTML
                    Agda.Interaction.PandocOptions
                    Agda.Interaction.PandocConvertOptions
  other-modules:    Paths_PandocAgda
  if true
    ghc-options:    -w
                    -fwarn-deprecated-flags
                    -fwarn-dodgy-foreign-imports
                    -fwarn-dodgy-imports
                    -fwarn-duplicate-exports
                    -fwarn-hi-shadowing
                    -fwarn-incomplete-patterns
                    -fwarn-missing-fields
                    -fwarn-missing-methods
                    -fwarn-overlapping-patterns
                    -fwarn-warnings-deprecations
  -- The Cabal-generated module Paths_Agda triggers a warning under
  -- GHC 7.2.1/7.2.2 (at least when certain versions of Cabal are
  -- used).
  if impl(ghc < 7.2.1) || impl(ghc > 7.2.2)
    ghc-options:    -Werror
  if impl(ghc >= 6.12)
    ghc-options:    -fwarn-dodgy-exports
                    -fwarn-wrong-do-bind
  if impl(ghc >= 7.2)
    ghc-options:    -fwarn-identities
  ghc-prof-options: -auto-all

executable agdapandoc
  hs-source-dirs: src/main
  main-is:        Main.hs
  build-depends:  PandocAgda == 2.4.0.0.0,
                  -- Nothing is used from the following package, except
                  -- for the prelude.
                  base >= 3 && < 6
  if impl(ghc >= 7)
    -- If someone installs Agda with the setuid bit set, then the
    -- presence of +RTS may be a security problem (see GHC bug #3910).
    -- However, we sometimes recommend people to use +RTS to control
    -- Agda's memory usage, so we want this functionality enabled by
    -- default.
    ghc-options:  -rtsopts


